--- a/notebooks/05_trans_load_journals.ipynb
+++ b/notebooks/05_trans_load_journals.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a539021e",
    "metadata": {},
    "outputs": [],
@@ -1164,21 +1164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "87da1c79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "journals.to_csv('../data/journals_db.csv')"
+    "journals.to_csv('../data/neuropapers_db/journals.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3ec6a3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
