--- a/notebooks/07_load_publications.ipynb
+++ b/notebooks/07_load_publications.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "61914a5a",
    "metadata": {},
    "outputs": [],
@@ -1294,21 +1294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "55ddd761",
    "metadata": {},
    "outputs": [],
    "source": [
-    "publications.to_csv('../data/publications_db.csv')"
+    "publications.to_csv('../data/neuropapers_db/publications.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "653608ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
