--- a/notebooks/09_load_affiliations.ipynb
+++ b/notebooks/09_load_affiliations.ipynb
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "67a7d6e2",
+   "id": "b78a922d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7aa30e36",
+   "id": "ced4f3a9",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aaa29270",
+   "id": "0f54697b",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "581a5620",
+   "id": "900996c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f2b73b79",
+   "id": "3112a8b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5900fc43",
+   "id": "e78a5991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "91159f05",
+   "id": "57e1948f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5bc1206c",
+   "id": "1da3df01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b1f8041",
+   "id": "31fb1fb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29b00598",
+   "id": "e4178222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e73fac",
+   "id": "59fcee67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "478ae0e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1af24f82",
+   "id": "94819ef9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -469,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725a21da",
+   "id": "5123491b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -477,15 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "305efbff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4348ef68",
+   "id": "d1d1ccad",
    "metadata": {},
    "outputs": [],
    "source": []
