--- a/notebooks/11_create_neuropapers_db.ipynb
+++ b/notebooks/11_create_neuropapers_db.ipynb
@@ -5,7 +5,8 @@
    "id": "2c79c598",
    "metadata": {},
    "source": [
-    "# Load to SQL"
+    "# Create neuropapers_db\n",
+    "In this notebook, I relied on SQLAlchemy to create the relational database neuropapers_db. This library allowed for the swift and efficient population of MySQL tables from pandas. All the prepared DataFrames ready for insertion are stored in `../data/neuropapers_db/` in (.csv) format. Within this notebook, there is a dictionary defining the relationships between tables. Subsequently, a function sheet is accessed where one function calls another with the ultimate goal of creating the database. The functions from `support.sql` have been adapted from those of my friend and SQL expert, [M Perales](https://github.com/jomariapc)."
    ]
   },
   {
@@ -51,7 +52,7 @@
    "outputs": [],
    "source": [
     "with open('../pswd_mysql.txt', 'r') as file:\n",
-    "    paswd = file.read().strip()"
+    "    password = file.read().strip()"
    ]
   },
   {
@@ -61,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str_conn = f'mysql+pymysql://root:{paswd}@localhost:3306'\n",
+    "str_conn = f'mysql+pymysql://root:{password}@localhost:3306'\n",
     "cursor = create_engine(str_conn)"
    ]
   },
@@ -88,21 +89,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a68c4207",
-   "metadata": {},
-   "source": [
-    "## Create the relationships"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "86eb143a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "str_conn = f'mysql+pymysql://root:{paswd}@localhost:3306/neuropapers_db'\n",
+    "str_conn = f'mysql+pymysql://root:{password}@localhost:3306/neuropapers_db'\n",
     "cursor = create_engine(str_conn)"
    ]
   },
@@ -169,7 +162,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26931e9",
+   "id": "cdf6b969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_tables(db_struc, cursor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a8e4011",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -177,7 +180,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8b3b33",
+   "id": "77f23db9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1d8bae0",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e37b0129",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -185,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4384cf5",
+   "id": "82a4cf1b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe2c16b",
+   "id": "c6733972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9fa995",
+   "id": "392f2179",
    "metadata": {},
    "source": [
     "## Create the tables in the database"
@@ -230,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0477e06f",
+   "id": "8dc146a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209a9303",
+   "id": "2c5e9887",
    "metadata": {},
    "source": [
     "## Fill the tables\n",
@@ -249,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3ff7ad",
+   "id": "dba73ba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "517c98dd",
+   "id": "847a8869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe9f3a9",
+   "id": "62e024bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -286,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c35bc27",
+   "id": "a5c5cf11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "196e66f2",
+   "id": "7eb837be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -302,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce0e4dbb",
+   "id": "b7cbf3f1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -310,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98527787",
+   "id": "30a734f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa4a905",
+   "id": "007eb17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d4b96e4",
+   "id": "593ee175",
    "metadata": {},
    "outputs": [],
    "source": [
