--- a/notebooks/05_trans_load_journals.ipynb
+++ b/notebooks/05_trans_load_journals.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a539021e",
    "metadata": {},
    "outputs": [],
@@ -1164,13 +1164,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "87da1c79",
    "metadata": {},
    "outputs": [],
    "source": [
     "journals.to_csv('../data/neuropapers_db/journals.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b26668bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f5fae90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "549d27d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "02effb66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "journals = pd.read_csv('../data/neuropapers_db/journals.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6b49f097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "journals['country_id'] = journals['country_id'].astype('int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "83e758ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 110 entries, 0 to 109\n",
+      "Data columns (total 61 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   journal_id     110 non-null    int64  \n",
+      " 1   country_id     110 non-null    int64  \n",
+      " 2   journal_name   110 non-null    object \n",
+      " 3   num_articles   110 non-null    int64  \n",
+      " 4   region         110 non-null    object \n",
+      " 5   publisher      110 non-null    object \n",
+      " 6   coverage       110 non-null    object \n",
+      " 7   categories     110 non-null    object \n",
+      " 8   areas          110 non-null    object \n",
+      " 9   sjr_2010       110 non-null    object \n",
+      " 10  quartile_2010  110 non-null    object \n",
+      " 11  hindex_2010    110 non-null    float64\n",
+      " 12  docs_2010      110 non-null    float64\n",
+      " 13  sjr_2011       110 non-null    object \n",
+      " 14  quartile_2011  110 non-null    object \n",
+      " 15  hindex_2011    110 non-null    float64\n",
+      " 16  docs_2011      110 non-null    float64\n",
+      " 17  sjr_2012       110 non-null    object \n",
+      " 18  quartile_2012  110 non-null    object \n",
+      " 19  hindex_2012    110 non-null    float64\n",
+      " 20  docs_2012      110 non-null    float64\n",
+      " 21  sjr_2013       110 non-null    object \n",
+      " 22  quartile_2013  110 non-null    object \n",
+      " 23  hindex_2013    110 non-null    float64\n",
+      " 24  docs_2013      110 non-null    float64\n",
+      " 25  sjr_2014       110 non-null    object \n",
+      " 26  quartile_2014  110 non-null    object \n",
+      " 27  hindex_2014    110 non-null    float64\n",
+      " 28  docs_2014      110 non-null    float64\n",
+      " 29  sjr_2015       110 non-null    object \n",
+      " 30  quartile_2015  110 non-null    object \n",
+      " 31  hindex_2015    110 non-null    float64\n",
+      " 32  docs_2015      110 non-null    float64\n",
+      " 33  sjr_2016       110 non-null    object \n",
+      " 34  quartile_2016  110 non-null    object \n",
+      " 35  hindex_2016    110 non-null    float64\n",
+      " 36  docs_2016      110 non-null    float64\n",
+      " 37  sjr_2017       110 non-null    object \n",
+      " 38  quartile_2017  110 non-null    object \n",
+      " 39  hindex_2017    110 non-null    float64\n",
+      " 40  docs_2017      110 non-null    float64\n",
+      " 41  sjr_2018       110 non-null    object \n",
+      " 42  quartile_2018  110 non-null    object \n",
+      " 43  hindex_2018    110 non-null    float64\n",
+      " 44  docs_2018      110 non-null    float64\n",
+      " 45  sjr_2019       110 non-null    object \n",
+      " 46  quartile_2019  110 non-null    object \n",
+      " 47  hindex_2019    110 non-null    float64\n",
+      " 48  docs_2019      110 non-null    float64\n",
+      " 49  sjr_2020       110 non-null    object \n",
+      " 50  quartile_2020  110 non-null    object \n",
+      " 51  hindex_2020    110 non-null    float64\n",
+      " 52  docs_2020      110 non-null    float64\n",
+      " 53  sjr_2021       110 non-null    object \n",
+      " 54  quartile_2021  110 non-null    object \n",
+      " 55  hindex_2021    110 non-null    float64\n",
+      " 56  docs_2021      110 non-null    float64\n",
+      " 57  sjr_2022       110 non-null    object \n",
+      " 58  quartile_2022  110 non-null    object \n",
+      " 59  hindex_2022    110 non-null    float64\n",
+      " 60  docs_2022      110 non-null    float64\n",
+      "dtypes: float64(26), int64(3), object(32)\n",
+      "memory usage: 52.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "journals.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a282a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
