--- a/notebooks/07_load_publications.ipynb
+++ b/notebooks/07_load_publications.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "61914a5a",
    "metadata": {},
    "outputs": [],
@@ -1294,13 +1294,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "55ddd761",
    "metadata": {},
    "outputs": [],
    "source": [
     "publications.to_csv('../data/neuropapers_db/publications.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ce887c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d3209e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58602315",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "13c03416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "publications = pd.read_csv('../data/neuropapers_db/publications.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ce152c8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pub_id</th>\n",
+       "      <th>journal_id</th>\n",
+       "      <th>last_revision</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>title</th>\n",
+       "      <th>pages</th>\n",
+       "      <th>DOI</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>journal</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>abstract_words</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>terms</th>\n",
+       "      <th>pub_type</th>\n",
+       "      <th>citation</th>\n",
+       "      <th>publication_year</th>\n",
+       "      <th>pub_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5507</th>\n",
+       "      <td>36382899</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022-12-21</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>The brain landscape of the two-hit model of po...</td>\n",
+       "      <td>1617-1624</td>\n",
+       "      <td>10.1152/jn.00340.2022</td>\n",
+       "      <td>['James, Lisa M', 'Engdahl, Brian E', 'Christo...</td>\n",
+       "      <td>Journal of neurophysiology</td>\n",
+       "      <td>The neurophysiological mechanisms underlying t...</td>\n",
+       "      <td>neurophysiological mechanisms underlying devel...</td>\n",
+       "      <td>['neurophysiological', 'mechanisms', 'underlyi...</td>\n",
+       "      <td>['functional magnetic resonance imaging', 'hyp...</td>\n",
+       "      <td>Journal Article</td>\n",
+       "      <td>J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43813</th>\n",
+       "      <td>36382899</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-12-02</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>The brain landscape of the two-hit model of po...</td>\n",
+       "      <td>1617-1624</td>\n",
+       "      <td>10.1152/jn.00340.2022</td>\n",
+       "      <td>['James, Lisa M', 'Engdahl, Brian E', 'Christo...</td>\n",
+       "      <td>Journal of neurophysiology</td>\n",
+       "      <td>The neurophysiological mechanisms underlying t...</td>\n",
+       "      <td>neurophysiological mechanisms underlying devel...</td>\n",
+       "      <td>['neurophysiological', 'mechanisms', 'underlyi...</td>\n",
+       "      <td>['functional magnetic resonance imaging', 'hyp...</td>\n",
+       "      <td>Journal Article</td>\n",
+       "      <td>J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         pub_id  journal_id last_revision  volume  \\\n",
+       "5507   36382899           5    2022-12-21   128.0   \n",
+       "43813  36382899           5    2023-12-02   128.0   \n",
+       "\n",
+       "                                                   title      pages  \\\n",
+       "5507   The brain landscape of the two-hit model of po...  1617-1624   \n",
+       "43813  The brain landscape of the two-hit model of po...  1617-1624   \n",
+       "\n",
+       "                         DOI  \\\n",
+       "5507   10.1152/jn.00340.2022   \n",
+       "43813  10.1152/jn.00340.2022   \n",
+       "\n",
+       "                                                 authors  \\\n",
+       "5507   ['James, Lisa M', 'Engdahl, Brian E', 'Christo...   \n",
+       "43813  ['James, Lisa M', 'Engdahl, Brian E', 'Christo...   \n",
+       "\n",
+       "                          journal  \\\n",
+       "5507   Journal of neurophysiology   \n",
+       "43813  Journal of neurophysiology   \n",
+       "\n",
+       "                                                abstract  \\\n",
+       "5507   The neurophysiological mechanisms underlying t...   \n",
+       "43813  The neurophysiological mechanisms underlying t...   \n",
+       "\n",
+       "                                          abstract_words  \\\n",
+       "5507   neurophysiological mechanisms underlying devel...   \n",
+       "43813  neurophysiological mechanisms underlying devel...   \n",
+       "\n",
+       "                                                keywords  \\\n",
+       "5507   ['neurophysiological', 'mechanisms', 'underlyi...   \n",
+       "43813  ['neurophysiological', 'mechanisms', 'underlyi...   \n",
+       "\n",
+       "                                                   terms         pub_type  \\\n",
+       "5507   ['functional magnetic resonance imaging', 'hyp...  Journal Article   \n",
+       "43813  ['functional magnetic resonance imaging', 'hyp...  Journal Article   \n",
+       "\n",
+       "                                                citation  publication_year  \\\n",
+       "5507   J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...              2022   \n",
+       "43813  J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...              2022   \n",
+       "\n",
+       "         pub_date  \n",
+       "5507   2022-01-01  \n",
+       "43813  2022-01-01  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "publications[publications['pub_id'] == 36382899]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "881c73f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(61981, 17)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(61945, 17)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "display(publications.shape)\n",
+    "publications = publications.drop_duplicates(subset=['pub_id'])\n",
+    "publications.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "193f0a70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
