--- a/notebooks/mapas y otros.ipynb
+++ b/notebooks/mapas y otros.ipynb
@@ -307,6 +307,161 @@
     "r = pdk.Deck(layers=[layer], initial_view_state=view_state)\n",
     "r.to_html('../html/prueba.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d48ad7ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d61284",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dynamically create models based on the dictionary\n",
+    "\n",
+    "for table_name, table_data in db_struc.items():\n",
+    "    class_name = table_name.capitalize()\n",
+    "\n",
+    "    class Model(Base):\n",
+    "        __tablename__ = table_name\n",
+    "        primary_keys = table_data['primary_keys']\n",
+    "        for pk in primary_keys:\n",
+    "            setattr(Model, pk, Column(Integer, primary_key=True))\n",
+    "\n",
+    "        foreign_keys = table_data.get('foreign_keys', [])\n",
+    "        for fk_data in foreign_keys:\n",
+    "            fk_name = fk_data['fk'][0]\n",
+    "            reference_table = fk_data['reference_table']\n",
+    "            reference_column = fk_data['reference_column']\n",
+    "            setattr(Model, fk_name, Column(Integer, ForeignKey(f'{reference_table}.{reference_column}')))\n",
+    "            setattr(Model, reference_table.lower(), relationship(reference_table.capitalize()))\n",
+    "\n",
+    "    globals()[class_name] = Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3fd942c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base.metadata.create_all(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecde856f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dict = {'countries': df_countries,\n",
+    "           'journals': df_journals,\n",
+    "           'publications': df_publications,\n",
+    "           'researchers': df_researchers,\n",
+    "           'affiliations': df_affiliations,\n",
+    "           'pub_res': df_pub_res,\n",
+    "           'pub_aff': df_pub_aff,\n",
+    "           'jrn_res': df_jrn_res,\n",
+    "           'aff_res': df_aff_res}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c19f4b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for table_name, df in df_dict.items():\n",
+    "    df.to_sql(table_name, con=engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49cbca85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a base class to declare models\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "# Define models for each table\n",
+    "class Country(Base):\n",
+    "    __tablename__ = 'countries'\n",
+    "    country_id = Column(Integer, primary_key=True)\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "\n",
+    "class Journal(Base):\n",
+    "    __tablename__ = 'journals'\n",
+    "    journal_id = Column(Integer, primary_key=True)\n",
+    "    country_id = Column(Integer, ForeignKey('countries.country_id'))\n",
+    "    country = relationship('Country')\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "\n",
+    "class Publication(Base):\n",
+    "    __tablename__ = 'publications'\n",
+    "    pub_id = Column(Integer, primary_key=True)\n",
+    "    journal_id = Column(Integer, ForeignKey('journals.journal_id'))\n",
+    "    journal = relationship('Journal')\n",
+    "    # Add more columns as needed\n",
+    "    title = Column(String(255), nullable=False)\n",
+    "    publication_date = Column(String(20))\n",
+    "\n",
+    "class Researcher(Base):\n",
+    "    __tablename__ = 'researchers'\n",
+    "    res_id = Column(Integer, primary_key=True)\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "    affiliation_id = Column(Integer, ForeignKey('affiliations.aff_id'))\n",
+    "    affiliation = relationship('Affiliation')\n",
+    "\n",
+    "class Affiliation(Base):\n",
+    "    __tablename__ = 'affiliations'\n",
+    "    aff_id = Column(Integer, primary_key=True)\n",
+    "    country_id = Column(Integer, ForeignKey('countries.country_id'))\n",
+    "    country = relationship('Country')\n",
+    "    # Add more columns as needed\n",
+    "    name = Column(String(255), nullable=False)\n",
+    "\n",
+    "class PublicationResearcher(Base):\n",
+    "    __tablename__ = 'pub_res'\n",
+    "    pub_id = Column(Integer, ForeignKey('publications.pub_id'), primary_key=True)\n",
+    "    res_id = Column(Integer, ForeignKey('researchers.res_id'), primary_key=True)\n",
+    "    publication = relationship('Publication')\n",
+    "    researcher = relationship('Researcher')\n",
+    "\n",
+    "class PublicationAffiliation(Base):\n",
+    "    __tablename__ = 'pub_aff'\n",
+    "    pub_id = Column(Integer, ForeignKey('publications.pub_id'), primary_key=True)\n",
+    "    aff_id = Column(Integer, ForeignKey('affiliations.aff_id'), primary_key=True)\n",
+    "    publication = relationship('Publication')\n",
+    "    affiliation = relationship('Affiliation')\n",
+    "\n",
+    "class JournalResearcher(Base):\n",
+    "    __tablename__ = 'jrn_res'\n",
+    "    journal_id = Column(Integer, ForeignKey('journals.journal_id'), primary_key=True)\n",
+    "    res_id = Column(Integer, ForeignKey('researchers.res_id'), primary_key=True)\n",
+    "    journal = relationship('Journal')\n",
+    "    researcher = relationship('Researcher')\n",
+    "\n",
+    "class AffiliationResearcher(Base):\n",
+    "    __tablename__ = 'aff_res'\n",
+    "    aff_id = Column(Integer, ForeignKey('affiliations.aff_id'), primary_key=True)\n",
+    "    res_id = Column(Integer, ForeignKey('researchers.res_id'), primary_key=True)\n",
+    "    affiliation = relationship('Affiliation')\n",
+    "    researcher = relationship('Researcher')"
+   ]
   }
  ],
  "metadata": {
